# generate_bar_code_telegram_bot

./: README.md  main.py  pyproject.toml  settings.py  start.sh
generate_bar_code_telegram_bot/bar_code/: core.py
generate_bar_code_telegram_bot/telegram_bot/: barcode_core.py  barcode_handlers.py
